--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-8.97MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-790.8KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇳 中国-10.21MB/s(Youtube:不良林), server: smart.19900101.xyz, port: 11001, type: vmess, uuid: 1cfaa36d-9912-3433-b9bc-fd5b5085613d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.10MB/s(Youtube:不良林), server: 43.154.77.196, port: 38539, type: vmess, uuid: a379bd7f-9d0d-4fb5-90c2-9b302782c4d6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [43.154.77.196]}}}
-  - {name: 🇨🇳 中国-2.75MB/s(Youtube:不良林), server: iepl.googo.cyou, port: 50057, type: ss, cipher: aes-128-gcm, password: 4b123507-254e-49f9-b56e-eda890788938}
-  - {name: 🇺🇸 美国-496.4KB/s(Youtube:不良林), server: s2.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s2.upyun.online, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.92MB/s(Youtube:不良林), server: iepl.googo.cyou, port: 50050, type: ss, cipher: aes-128-gcm, password: 4b123507-254e-49f9-b56e-eda890788938}
+  - {name: 🇨🇳 中国-2.79MB/s(Youtube:不良林), server: iepl.googo.cyou, port: 50065, type: ss, cipher: aes-128-gcm, password: 4b123507-254e-49f9-b56e-eda890788938}
+  - {name: 🇺🇸 美国-3.09MB/s(Youtube:不良林), server: us03.gogogoo.cyou, port: 443, type: vmess, uuid: db5d1aa3-908b-44d1-be0a-4e6a8d4e4cda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /go, ws-headers: {Host: us03.gogogoo.cyou}}
+  - {name: 🇳🇱 荷兰-302.0KB/s(Youtube:不良林), server: 213.183.59.190, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
   - {name: 🇦🇺 澳大利亚-2.37MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.26MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇳 中国-860.2KB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
-  - {name: 🇨🇳 中国-569.2KB/s(Youtube:不良林), server: iepl7.dcnode.me, port: 10037, type: ss, cipher: aes-128-gcm, password: d307b05c-2341-4ffa-b376-9d3a46cf7ac9}
+  - {name: 🇯🇵 日本-5.34MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-15.32MB/s(Youtube:不良林), server: iepl.googo.cyou, port: 50052, type: ss, cipher: aes-128-gcm, password: 4b123507-254e-49f9-b56e-eda890788938}
+  - {name: 🇨🇳 中国-444.3KB/s(Youtube:不良林), server: nas5.travelerv2.xyz, port: 21871, type: vmess, uuid: b69f3735-a1a1-3dbf-889b-4594d140752f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: nas5.travelerv2.xyz}}
+  - {name: 🇨🇳 中国-10.21MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20003, type: trojan, password: e5cf7069-e269-4926-bdb0-fbb39cde6a3a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.24MB/s(Youtube:不良林), server: 164.92.99.126, port: 52441, type: ss, cipher: chacha20-ietf-poly1305, password: 5e04bdc6-6f09-4f5e-a3c7-edf4d3220ad3}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-8.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-790.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-496.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-302.0KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-860.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-569.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-8.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-790.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-496.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-302.0KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-860.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-569.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-8.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-790.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-496.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-302.0KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-860.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-569.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-8.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-790.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-496.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-302.0KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-860.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-569.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-8.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-790.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-496.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-302.0KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-860.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-569.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-8.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-790.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-496.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-302.0KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-860.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-569.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-8.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-790.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-496.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-302.0KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-860.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-569.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
