--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-12.17MB/s(Youtube:不良林), server: iepl-zebra.19900101.xyz, port: 4501, type: vmess, uuid: 1cfaa36d-9912-3433-b9bc-fd5b5085613d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.75MB/s(Youtube:不良林), server: 103.172.116.9, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
-  - {name: 🇨🇳 中国-3.08MB/s(Youtube:不良林), server: iepl.googo.cyou, port: 50065, type: ss, cipher: aes-128-gcm, password: 4b123507-254e-49f9-b56e-eda890788938}
-  - {name: 🇳🇱 荷兰-302.0KB/s(Youtube:不良林), server: 213.183.59.190, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
-  - {name: 🇨🇳 中国-860.2KB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
-  - {name: 🇺🇸 美国-5.24MB/s(Youtube:不良林), server: 164.92.99.126, port: 52441, type: ss, cipher: chacha20-ietf-poly1305, password: 5e04bdc6-6f09-4f5e-a3c7-edf4d3220ad3}
-  - {name: 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林), server: 185.167.116.252, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
-  - {name: 🇰🇷 韩国-1.42MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.39MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.96MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20005, type: trojan, password: e5cf7069-e269-4926-bdb0-fbb39cde6a3a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-3.33MB/s(Youtube:不良林), server: 129.154.48.221, port: 37372, type: vmess, uuid: 6f4454a9-e732-46c6-c50f-73f13da31f7b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.66MB/s(Youtube:不良林), server: iepl.googo.cyou, port: 50058, type: ss, cipher: aes-128-gcm, password: 4b123507-254e-49f9-b56e-eda890788938}
+  - {name: 🇺🇸 美国-5.39MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-157.5KB/s(Youtube:不良林), server: 185.167.116.252, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
+  - {name: 🇨🇦 加拿大-2.72MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-468.3KB/s(Youtube:不良林), server: s2.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s2.upyun.online, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-311.1KB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s1.upyun.online, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-315.0KB/s(Youtube:不良林), server: s4.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s4.upyun.online, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-2.86MB/s(Youtube:不良林), server: jgwld2.gaox.ml, port: 443, type: trojan, password: d7fd8aaa-4581-4281-80aa-4b63e5e1f157, sni: jgwld2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-12.17MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-302.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-860.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-157.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-468.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-311.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-315.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.86MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-12.17MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-302.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-860.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-157.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-468.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-311.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-315.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.86MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-12.17MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-302.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-860.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-157.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-468.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-311.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-315.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.86MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-12.17MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-302.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-860.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-157.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-468.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-311.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-315.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.86MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-12.17MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-302.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-860.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-157.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-468.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-311.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-315.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.86MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-12.17MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-302.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-860.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-157.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-468.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-311.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-315.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.86MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-12.17MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-302.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-860.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-157.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-468.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-311.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-315.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.86MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
