--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-8.96MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20005, type: trojan, password: e5cf7069-e269-4926-bdb0-fbb39cde6a3a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-3.33MB/s(Youtube:不良林), server: 129.154.48.221, port: 37372, type: vmess, uuid: 6f4454a9-e732-46c6-c50f-73f13da31f7b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.66MB/s(Youtube:不良林), server: iepl.googo.cyou, port: 50058, type: ss, cipher: aes-128-gcm, password: 4b123507-254e-49f9-b56e-eda890788938}
-  - {name: 🇺🇸 美国-5.39MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-157.5KB/s(Youtube:不良林), server: 185.167.116.252, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
-  - {name: 🇨🇦 加拿大-2.72MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-468.3KB/s(Youtube:不良林), server: s2.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s2.upyun.online, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-311.1KB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s1.upyun.online, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-315.0KB/s(Youtube:不良林), server: s4.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s4.upyun.online, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-2.86MB/s(Youtube:不良林), server: jgwld2.gaox.ml, port: 443, type: trojan, password: d7fd8aaa-4581-4281-80aa-4b63e5e1f157, sni: jgwld2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.03MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇯🇵 日本-17.77MB/s(Youtube:不良林), server: jp2.trojan.tel, port: 443, type: trojan, password: f736834f-1fc8-4738-9884-9afe0eb0d818, sni: jp2.trojan.tel, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-317.8KB/s(Youtube:不良林), server: 213.183.53.177, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
+  - {name: 🇬🇧 英国-3.02MB/s(Youtube:不良林), server: jgwld2.gaox.ml, port: 443, type: trojan, password: d7fd8aaa-4581-4281-80aa-4b63e5e1f157, sni: jgwld2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-8.77MB/s(Youtube:不良林), server: jpaz2.xmrth-node.xyz, port: 13240, type: vmess, uuid: ff51ca4a-6050-3e26-a037-88b0dd62d138, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: jpaz2.xmrth-node.xyz}}
+  - {name: 🇸🇬 新加坡-451.7KB/s(Youtube:不良林), server: 103.172.116.9, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
+  - {name: 🇸🇬 新加坡-968.4KB/s(Youtube:不良林), server: 103.172.116.9, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇸🇬 新加坡-412.4KB/s(Youtube:不良林), server: 103.172.116.9, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
+  - {name: 🇨🇳 中国-729.0KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16010, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇸🇬 新加坡-1.03MB/s(Youtube:不良林), server: 103.172.116.9, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-157.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-468.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-311.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-315.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-317.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-451.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-968.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-412.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-729.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-157.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-468.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-311.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-315.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-317.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-451.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-968.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-412.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-729.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-157.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-468.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-311.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-315.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-317.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-451.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-968.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-412.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-729.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-157.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-468.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-311.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-315.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-317.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-451.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-968.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-412.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-729.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-157.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-468.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-311.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-315.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-317.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-451.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-968.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-412.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-729.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-157.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-468.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-311.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-315.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-317.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-451.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-968.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-412.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-729.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-157.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-468.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-311.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-315.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-317.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-451.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-968.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-412.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-729.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
